--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "type": "git",
     "url": "https://git-wip-us.apache.org/repos/asf/cordova-app-hello-world.git"
   },
+  "main": "index.js",
   "keywords": [
     "ecosystem:cordova"
   ],
