CB-10522: Event binding in Hello World is misleading
Fixing the Hello World example

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "main": "index.js",
   "keywords": [
-    "ecosystem:cordova"
+    "ecosystem:cordova",
+    "cordova:template"
   ],
   "author": "Apache Software Foundation",
   "license": "Apache version 2.0"
