--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "url": "https://github.com/apache/cordova-app-hello-world"
   },
   "main": "index.js",
+  "files": ["*.md", "template_src"],
   "keywords": [
     "ecosystem:cordova",
     "cordova:template"
