--- a/template_src/package.json
+++ b/template_src/package.json
@@ -7,6 +7,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [
+    "ecosystem:cordova"
+  ],
   "author": "Apache Cordova Team",
   "license": "Apache-2.0"
 }
