--- a/template_src/package.json
+++ b/template_src/package.json
@@ -11,5 +11,8 @@
     "ecosystem:cordova"
   ],
   "author": "Apache Cordova Team",
-  "license": "Apache-2.0"
+  "license": "Apache-2.0",
+  "devDependencies": {
+    "cordova-plugin-whitelist": "^1.3.4"
+  }
 }
